--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+}
+img{
+  /* margin-top: 100px; */
+  width: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.login_page{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+}
+.btn{
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: rgb(194, 192, 78);
+  border: 2px solid rgb(101, 152, 39);
 }
-
-.App-link {
-  color: #61dafb;
+button{
+  width: 100px;
+  background: none;
+  border: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1{
+  padding: 20px;
+  text-align: center;
 }
